styles.css
:root {
    --border-color: #AAA;
    --border: 1px solid var(--border-color);
    --border-radius: .5rem;
    --padding: 1rem;
    --margin: 1rem;
    --bg-color: white;
    --bg-color-1: #EEE;
    --bg-color-2: #EFE;
    --bg-color-3: #CFC;
    --bg-color-4: #AFA;
    --fg-color: black;
    --fg-color-1: #090;
    --fg-color-2: #B00;
}

body {
    background-color: var(--bg-color);
    color: var(--fg-color);
    font-family: Helvetica, Arial, sans-serif;
    max-width: 30rem;
    margin: 0 auto 4rem; /*extra margin at bottom for Firefox mobile*/
    &:has(dialog[open]) { /*prevent scrolling when dialog open*/
        overflow: hidden;
    }
}

header {
    text-align: right;
    font-size: 0.8rem;
    padding-right: (0.5 * var(--padding));
    color: var(--border-color);
}

button {
    border: var(--border);
    border-radius: var(--border-radius);
    padding: calc(var(--padding) / 2) var(--padding);
    margin: calc(var(--margin) / 4);
    height: 2.5rem;
    width: 5rem;
    color: var(--fg-color);
    background-color: var(--bg-color-3);
    font-size: 1rem;
    &:hover {
        background-color: var(--bg-color-4);
    }
}

.j-input {
    display: grid;
    grid-template-columns: 10rem 1fr;
    row-gap: 1rem;
    background-color: var(--bg-color-2);
    border-top: var(--border);
    border-bottom: var(--border);
    padding: var(--padding);
    input {
        font-size: 1.25rem;
        border: var(--border);
        border-radius: var(--border-radius);
        padding: 0.25rem;
    }
    input::placeholder {
        color: var(--border-color);
        font-size: 1rem;
    }
    input:invalid {
        color: var(--fg-color-2);
    }
    input:valid.valid {
        color: var(--fg-color-1);
    }
    .j-button-bar {
        grid-column: 2;
        text-align: right;
    }
}

.j-output {
    display: grid;
    grid-template-columns: 10rem 1fr;
    background-color: var(--bg-color);
    margin: calc(2 * var(--margin)) 0;
    .j-output-label {
        text-align: left;
        font-weight: bold;
        border-bottom: var(--border);
        padding-left: var(--padding);
    }
    .j-result {
        text-align: center;
        font-size: 1.25rem;
        padding: var(--padding);
        border-bottom: var(--border);
    }
    .j-output-label:first-child, .j-result:nth-child(2) {
        border-top: var(--border);
    }
    span {
        color: var(--fg-color-1);
        font-weight: bold;
        padding: 0 0.5rem;
    }
}

dialog {
    max-width:45rem;
    padding: 0.5rem;
    border: var(--border);
    border-radius: var(--border-radius);
    line-height: 1.6;
    code {
        font-size: 1.05rem;
        color: var(--fg-color-1);
        white-space: nowrap;
    }
    dt {
        font-weight: bold;
    }
    dd {
        margin: 1rem;
    }
    .j-button-bar {
        text-align: right;
        margin-bottom: 1rem;
    }
    .j-scroll-container {
        max-height: min(35rem, 50vh);
        overflow-y: scroll;
    }
    .j-scroll-container:focus {
        outline: none;
    }
    .j-scrollability-indicator {
        border: var(--border);
        border-radius: var(--border-radius);
        padding: 2rem;
        margin: 1rem;
    }
    &::backdrop {
        backdrop-filter: blur(2px);
    }
}


@media (max-width: 30rem ) {
    .j-input {
        grid-template-columns: 1fr;
        .j-button-bar {
            grid-column: 1;
        }
    }
    .j-output {
        grid-template-columns: 1fr;
        .j-output-label {
            border-bottom: none;
        }
        .j-result:nth-child(2) {
            border-top: none;
        }
    }
    dialog {
        padding: 0.2rem;
        .j-scrollability-indicator {
            padding: 0.5rem;
            margin: 0.5rem;
        }
    }
}

